app/src/test/resources/programs/invalid/foonctions/duplicatedNamedArgumentTooManyArgs.exe
foo g(a: Int, b: Int) -> Int = a + b;

foo main() -> Int = {
    g(a=1, a=2, b=3)
}
